Add Notion sync

--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@
                         <a href="https://www.zhihu.com/people/ji-hua-li" target="_blank" class="contact-btn">
                             <span>📝</span> 知乎：计划李
                         </a>
-                        <a href="mailto:your-email@example.com" class="contact-btn">
+                        <a href="/cdn-cgi/l/email-protection#4930263c3b642c24282025092c31282439252c672a2624" class="contact-btn">
                             <span>✉️</span> 邮件联系
                         </a>
                     </div>
@@ -171,7 +171,3 @@
                     <a href="https://github.com" target="_blank">GitHub</a>
                 </div>
             </div>
-        </div>
-    </footer>
-</body>
-</html>
