delete some unused files

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
                 <div class="about-block">
                     <h2 class="block-title">个人简介</h2>
                     <p class="block-text">
-                        我是Kevin，在知乎上以<strong>"计划李"</strong>的名字分享内容。2025年3月，我结束了在政府部门近5年的工作（2020年7月-2025年3月），
+                        我是Kevin，在知乎上以<strong>"计划李"</strong>的名字分享内容。2025年3月，我结束了在政府部门近5年的工作，
                         开启了自由职业生涯。
                     </p>
                     <p class="block-text">
@@ -62,7 +62,7 @@
                             <div class="timeline-dot"></div>
                             <div class="timeline-content">
                                 <h3>2020年7月 - 2025年3月</h3>
-                                <p><strong>政府部门职员</strong></p>
+                                <p><strong>某部委事业单位</strong></p>
                                 <p>近5年的体制内工作经验</p>
                             </div>
                         </div>
@@ -70,7 +70,7 @@
                             <div class="timeline-dot"></div>
                             <div class="timeline-content">
                                 <h3>GCDF认证</h3>
-                                <p><strong>全球职业规划师</strong></p>
+                                <p><strong>全球生涯规划师</strong></p>
                                 <p>为6-7位前同事提供职业转型咨询</p>
                             </div>
                         </div>
@@ -131,14 +131,14 @@
                 <div class="about-block">
                     <h2 class="block-title">生活 & 兴趣</h2>
                     <p class="block-text">
-                        我通过<strong>骑行</strong>保持健康，几个月内减重近20磅。阅读、编程和投资研究是我的主要兴趣。
+                        我通过<strong>骑行</strong>保持健康，几个月内减重近20斤。阅读、编程和投资研究是我的主要兴趣。
                     </p>
                     <p class="block-text">
                         我使用<strong>Apple Vision Pro</strong>进行工作和研究，探索新技术在生产力方面的应用。
                         同时维持着结构化的个人发展routine，专注于认知提升、技术能力和健康维护。
                     </p>
                     <p class="block-text">
-                        2025年，我即将成为父亲，这也让我思考如何在个人发展和家庭责任之间找到平衡。
+                        2025年，我即将成为一名<strong>父亲</strong>，这也让我思考如何在个人发展和家庭责任之间找到<strong>平衡</strong>。
                     </p>
                 </div>
 
@@ -152,7 +152,7 @@
                         <a href="https://www.zhihu.com/people/ji-hua-li" target="_blank" class="contact-btn">
                             <span>📝</span> 知乎：计划李
                         </a>
-                        <a href="/cdn-cgi/l/email-protection#4930263c3b642c24282025092c31282439252c672a2624" class="contact-btn">
+                        <a href="mailto:kevinlee19951002@gmail.com" class="contact-btn">
                             <span>✉️</span> 邮件联系
                         </a>
                     </div>
