--- a/blog.html
+++ b/blog.html
@@ -43,131 +43,204 @@
 
             <!-- 文章列表 -->
             <div class="blog-grid" id="blogGrid">
+                <article class="blog-card" data-category="personal">
+                    <div class="blog-tag">个人成长</div>
+                    <h2 class="blog-title">NPC原则：如何建立强大的内心</h2>
+                    <p class="blog-excerpt">在日常生活中，我摸索出了一个提升自信的思维框架：NPC原则。把自己当作人生的主角，把他人看作游戏中的NPC，不为无关紧要的评价所困扰。</p>
+                    <div class="blog-meta">
+                        <span class="blog-date">2025-11-17</span>
+                        <span class="blog-read">6分钟阅读</span>
+                    </div>
+                    <a href="npc-principle.html" class="read-more">阅读全文 →</a>
+                </article>
+
+                <article class="blog-card" data-category="personal">
+                    <div class="blog-tag">个人成长</div>
+                    <h2 class="blog-title">对抗本能：成功者的逆向思维</h2>
+                    <p class="blog-excerpt">阅读《认知觉醒》时，我理解了成功者为什么能对抗本能。从学习编程到坑持运动，我逐渐体会到：与其逃避困难，不如拥抱失败，把它变成成功的积累。</p>
+                    <div class="blog-meta">
+                        <span class="blog-date">2025-11-17</span>
+                        <span class="blog-read">7分钟阅读</span>
+                    </div>
+                    <a href="overcoming-instincts.html" class="read-more">阅读全文 →</a>
+                </article>
+
+                <article class="blog-card" data-category="personal">
+                    <div class="blog-tag">个人成长</div>
+                    <h2 class="blog-title">极简生活：从微信臃肿到生活精简的思考</h2>
+                    <p class="blog-excerpt">在换手机整理微信时，我意识到生活被繁杂的数字内容裹挟。这引发了我对极简主义的思考，以及如何在工作、生活、数字工具等多个维度实践精简原则。</p>
+                    <div class="blog-meta">
+                        <span class="blog-date">2025-11-17</span>
+                        <span class="blog-read">6分钟阅读</span>
+                    </div>
+                    <a href="minimalism-digital-life.html" class="read-more">阅读全文 →</a>
+                </article>
+
+                <article class="blog-card" data-category="career">
+                    <div class="blog-tag">职业发展</div>
+                    <h2 class="blog-title">我是如何下定决心从体制内辞职的</h2>
+                    <p class="blog-excerpt">从第一次想辞职到真正递交辞呈，我用了整整两年。这篇文章详细记录了我在部委工作五年的心路历程，以及最终下定决心离开的完整过程。</p>
+                    <div class="blog-meta">
+                        <span class="blog-date">2025-11-15</span>
+                        <span class="blog-read">12分钟阅读</span>
+                    </div>
+                    <a href="resignation-decision-process.html" class="read-more">阅读全文 →</a>
+                </article>
+
+                <article class="blog-card" data-category="personal">
+                    <div class="blog-tag">个人成长</div>
+                    <h2 class="blog-title">辞职近一年，我是如何度过这段等待期的</h2>
+                    <p class="blog-excerpt">辞职后的这几个月，我通过骑行减重20磅、自学编程、阅读提升认知，建立了属于自己的生活节奏。这不是成功学，而是真实的探索过程。</p>
+                    <div class="blog-meta">
+                        <span class="blog-date">2025-11-14</span>
+                        <span class="blog-read">10分钟阅读</span>
+                    </div>
+                    <a href="freelance-first-year.html" class="read-more">阅读全文 →</a>
+                </article>
+
+                <article class="blog-card" data-category="personal">
+                    <div class="blog-tag">个人成长</div>
+                    <h2 class="blog-title">从“目标驱动”到“活在当下”：我的思维转变</h2>
+                    <p class="blog-excerpt">过去我总是在设定目标、追求结果，但这种方式让我越来越焚虑。直到我开始尝试“活在当下”，才发现真正的改变往往在不知不觉中发生。</p>
+                    <div class="blog-meta">
+                        <span class="blog-date">2025-11-13</span>
+                        <span class="blog-read">8分钟阅读</span>
+                    </div>
+                    <a href="living-in-the-moment.html" class="read-more">阅读全文 →</a>
+                </article>
+
                 <article class="blog-card" data-category="career">
                     <div class="blog-tag">职业发展</div>
                     <h2 class="blog-title">离开体制内的五年反思</h2>
-                    <p class="blog-excerpt">
-                        2020年7月进入政府部门，2025年3月正式离职。这五年的经历让我深刻理解了体制内工作的优势与局限。
-                        离开不是逃避，而是为了追寻更适合自己的发展道路...
-                    </p>
+                    <p class="blog-excerpt">2020年7月进入政府部门，2025年3月正式离职。这五年的经历让我深刻理解了体制内工作的优势与局限。离开不是逃避，而是为了追寻更适合自己的发展道路。</p>
                     <div class="blog-meta">
                         <span class="blog-date">2025-03-15</span>
                         <span class="blog-read">5分钟阅读</span>
                     </div>
-                    <a href="article1.html" class="read-more">阅读全文 →</a>
+                    <a href="career-transition.html" class="read-more">阅读全文 →</a>
                 </article>
 
                 <article class="blog-card" data-category="ai">
                     <div class="blog-tag">AI应用</div>
                     <h2 class="blog-title">AI驱动的职业规划工具开发实践</h2>
-                    <p class="blog-excerpt">
-                        作为GCDF持证者，我尝试将Claude、ChatGPT等AI工具整合到职业咨询流程中。
-                        从简历优化到面试准备，AI正在改变传统职业规划的方式...
-                    </p>
+                    <p class="blog-excerpt">作为GCDF持证者，我尝试将Claude、ChatGPT等AI工具整合到职业咨询流程中。从简历优化到面试准备，AI正在改变传统职业规划的方式。</p>
                     <div class="blog-meta">
                         <span class="blog-date">2025-02-20</span>
-                        <span class="blog-read">8分钟阅读</span>
+                        <span class="blog-read">None分钟阅读</span>
                     </div>
-                    <a href="#" class="read-more">阅读全文 →</a>
+                    <a href="ai-career-tools.html" class="read-more">阅读全文 →</a>
                 </article>
 
                 <article class="blog-card" data-category="investment">
                     <div class="blog-tag">投资思考</div>
                     <h2 class="blog-title">科技股投资：从P/E比率到基本面分析</h2>
-                    <p class="blog-excerpt">
-                        投资IREN、CIFR、腾讯、小米等科技股的过程中，我逐渐理解了财务指标背后的商业逻辑。
-                        P/E比率不是唯一标准，理解公司业务才是关键...
-                    </p>
+                    <p class="blog-excerpt">投资IREN、CIFR、腾讯、小米等科技股的过程中，我逐渐理解了财务指标背后的商业逻辑。P/E比率不是唯一标准，理解公司业务才是关键.</p>
                     <div class="blog-meta">
                         <span class="blog-date">2025-01-10</span>
                         <span class="blog-read">12分钟阅读</span>
                     </div>
-                    <a href="#" class="read-more">阅读全文 →</a>
+                    <a href="tech-stock-analysis.html" class="read-more">阅读全文 →</a>
                 </article>
 
                 <article class="blog-card" data-category="ai">
                     <div class="blog-tag">AI应用</div>
                     <h2 class="blog-title">多个AI订阅的实用价值评估</h2>
-                    <p class="blog-excerpt">
-                        同时订阅Claude、ChatGPT、Gemini、Perplexity是否必要？
-                        经过几个月的使用，我总结了各个平台的优势场景和实用技巧...
-                    </p>
+                    <p class="blog-excerpt">同时订阅Claude、ChatGPT、Gemini、Perplexity是否必要？经过几个月的使用，我总结了各个平台的优势场景和实用技巧。</p>
                     <div class="blog-meta">
                         <span class="blog-date">2024-12-05</span>
                         <span class="blog-read">7分钟阅读</span>
                     </div>
-                    <a href="#" class="read-more">阅读全文 →</a>
+                    <a href="ai-subscriptions-review.html" class="read-more">阅读全文 →</a>
                 </article>
 
                 <article class="blog-card" data-category="personal">
                     <div class="blog-tag">个人成长</div>
                     <h2 class="blog-title">从Notion到Flomo：我的知识管理演进</h2>
-                    <p class="blog-excerpt">
-                        曾经沉迷于复杂的Notion系统，最终发现简单的Flomo更适合日常记录。
-                        工具不在于功能强大，而在于是否真正使用...
-                    </p>
+                    <p class="blog-excerpt">曾经沉迷于复杂的Notion系统，最终发现简单的Flomo更适合日常记录。工具不在于功能强大，而在于是否真正使用。</p>
                     <div class="blog-meta">
                         <span class="blog-date">2024-11-20</span>
                         <span class="blog-read">6分钟阅读</span>
                     </div>
-                    <a href="#" class="read-more">阅读全文 →</a>
+                    <a href="knowledge-management-evolution.html" class="read-more">阅读全文 →</a>
+                </article>
+
+                <article class="blog-card" data-category="ai">
+                    <div class="blog-tag">AI应用</div>
+                    <h2 class="blog-title">ChatGPT与Claude的使用体验对比:简洁vs冗长的沟通风格</h2>
+                    <p class="blog-excerpt">实际使用中发现ChatGPT过于礼貌冗长,而Claude更简洁直接。分享如何优化AI助手的沟通风格。</p>
+                    <div class="blog-meta">
+                        <span class="blog-date">2024-11-12</span>
+                        <span class="blog-read">6分钟阅读</span>
+                    </div>
+                    <a href="chatgpt-vs-claude-communication.html" class="read-more">阅读全文 →</a>
+                </article>
+
+                <article class="blog-card" data-category="ai">
+                    <div class="blog-tag">AI应用</div>
+                    <h2 class="blog-title">Vision Pro办公实战:从硬件惊艳到软件妥协</h2>
+                    <p class="blog-excerpt">租用Vision Pro一个月的真实体验。硬件完美但软件生态不足,虚拟键盘显示等问题待解决。</p>
+                    <div class="blog-meta">
+                        <span class="blog-date">2024-11-10</span>
+                        <span class="blog-read">8分钟阅读</span>
+                    </div>
+                    <a href="vision-pro-office-experience.html" class="read-more">阅读全文 →</a>
+                </article>
+
+                <article class="blog-card" data-category="ai">
+                    <div class="blog-tag">AI应用</div>
+                    <h2 class="blog-title">Claude Skills深度体验:如何让AI更懂你的工作</h2>
+                    <p class="blog-excerpt">探索Claude Skills功能,将专业知识打包成可复用的技能包,提升AI协作效率。</p>
+                    <div class="blog-meta">
+                        <span class="blog-date">2024-11-05</span>
+                        <span class="blog-read">7分钟阅读</span>
+                    </div>
+                    <a href="claude-skills-deep-dive.html" class="read-more">阅读全文 →</a>
+                </article>
+
+                <article class="blog-card" data-category="ai">
+                    <div class="blog-tag">AI应用</div>
+                    <h2 class="blog-title">从决策瘾痪到行动:AI工具如何帮我突破思维困局</h2>
+                    <p class="blog-excerpt">拥有多个方向和想法,却难以开始行动?分享用AI工具快速原型化想法,打破行动障碍。</p>
+                    <div class="blog-meta">
+                        <span class="blog-date">2024-10-28</span>
+                        <span class="blog-read">5分钟阅读</span>
+                    </div>
+                    <a href="breaking-decision-paralysis-with-ai.html" class="read-more">阅读全文 →</a>
                 </article>
 
                 <article class="blog-card" data-category="career">
                     <div class="blog-tag">职业发展</div>
                     <h2 class="blog-title">GCDF认证：职业规划师的必备技能</h2>
-                    <p class="blog-excerpt">
-                        获得GCDF证书后，我为6-7位前同事提供了职业转型咨询。
-                        这段经历让我理解了专业职业规划的价值和方法论...
-                    </p>
+                    <p class="blog-excerpt">获得GCDF证书后，我为6-7位前同事提供了职业转型咨询。这段经历让我理解了专业职业规划的价值和方法论。</p>
                     <div class="blog-meta">
                         <span class="blog-date">2024-10-15</span>
                         <span class="blog-read">10分钟阅读</span>
                     </div>
-                    <a href="#" class="read-more">阅读全文 →</a>
+                    <a href="gcdf-certification-guide.html" class="read-more">阅读全文 →</a>
                 </article>
 
                 <article class="blog-card" data-category="personal">
                     <div class="blog-tag">个人成长</div>
                     <h2 class="blog-title">骑行减重：20磅的改变之旅</h2>
-                    <p class="blog-excerpt">
-                        通过坚持骑行，我在几个月内减重近20磅。这不仅是身体的改变，
-                        更是意志力和习惯养成的过程...
-                    </p>
+                    <p class="blog-excerpt">通过坚持骑行，我在几个月内减重近20磅。这不仅是身体的改变，更是意志力和习惯养成的过程。</p>
                     <div class="blog-meta">
                         <span class="blog-date">2024-09-08</span>
                         <span class="blog-read">5分钟阅读</span>
                     </div>
-                    <a href="#" class="read-more">阅读全文 →</a>
-                </article>
-
-                <article class="blog-card" data-category="investment">
-                    <div class="blog-tag">投资思考</div>
-                    <h2 class="blog-title">能源存储技术与投资机会</h2>
-                    <p class="blog-excerpt">
-                        深入研究IREN等公司让我了解到能源存储技术的发展前景。
-                        技术革新往往带来投资机会，但需要深入理解其商业模式...
-                    </p>
-                    <div class="blog-meta">
-                        <span class="blog-date">2024-08-22</span>
-                        <span class="blog-read">15分钟阅读</span>
-                    </div>
-                    <a href="#" class="read-more">阅读全文 →</a>
+                    <a href="cycling-weight-loss-journey.html" class="read-more">阅读全文 →</a>
                 </article>
 
                 <article class="blog-card" data-category="personal">
                     <div class="blog-tag">个人成长</div>
                     <h2 class="blog-title">活在当下：从目的导向到体验当下</h2>
-                    <p class="blog-excerpt">
-                        长期的目的导向思维让我忽略了当下的体验。通过反思和调整，
-                        我开始学会享受过程而不只是追求结果...
-                    </p>
+                    <p class="blog-excerpt">长期的目的导向思维让我忽略了当下的体验。通过反思和调整，我开始学会享受过程而不只是追求结果。</p>
                     <div class="blog-meta">
                         <span class="blog-date">2024-07-30</span>
                         <span class="blog-read">8分钟阅读</span>
                     </div>
-                    <a href="#" class="read-more">阅读全文 →</a>
+                    <a href="living-in-the-moment.html" class="read-more">阅读全文 →</a>
                 </article>
+
             </div>
         </div>
     </section>
