--- a/index.html
+++ b/index.html
@@ -49,34 +49,35 @@
             <h2 class="section-title">精选文章</h2>
             <div class="articles-grid">
                 <article class="article-card">
-                    <div class="article-tag">职业发展</div>
-                    <h3 class="article-title">离开体制内的五年反思</h3>
-                    <p class="article-excerpt">从政府部门到自由职业，这段旅程教会了我什么...</p>
+                    <div class="article-tag">个人成长</div>
+                    <h3 class="article-title">NPC原则：如何建立强大的内心</h3>
+                    <p class="article-excerpt">在日常生活中，我摸索出了一个提升自信的思维框架：NPC原则。把自己当作人生的主角，把他人看作游戏中的...</p>
                     <div class="article-meta">
-                        <span class="article-date">2025-03-15</span>
-                        <span class="article-read">5分钟阅读</span>
+                        <span class="article-date">2025-11-17</span>
+                        <span class="article-read">6分钟阅读</span>
                     </div>
                 </article>
 
                 <article class="article-card">
-                    <div class="article-tag">AI应用</div>
-                    <h3 class="article-title">AI驱动的职业规划工具开发</h3>
-                    <p class="article-excerpt">如何利用Claude、ChatGPT等AI工具提升职业咨询效率...</p>
+                    <div class="article-tag">个人成长</div>
+                    <h3 class="article-title">对抗本能：成功者的逆向思维</h3>
+                    <p class="article-excerpt">阅读《认知觉醒》时，我理解了成功者为什么能对抗本能。从学习编程到坑持运动，我逐渐体会到：与其逃避困难...</p>
                     <div class="article-meta">
-                        <span class="article-date">2025-02-20</span>
-                        <span class="article-read">8分钟阅读</span>
+                        <span class="article-date">2025-11-17</span>
+                        <span class="article-read">7分钟阅读</span>
                     </div>
                 </article>
 
                 <article class="article-card">
-                    <div class="article-tag">投资思考</div>
-                    <h3 class="article-title">科技股投资的底层逻辑</h3>
-                    <p class="article-excerpt">从P/E比率到基本面分析，理解投资的本质...</p>
+                    <div class="article-tag">个人成长</div>
+                    <h3 class="article-title">极简生活：从微信臃肿到生活精简的思考</h3>
+                    <p class="article-excerpt">在换手机整理微信时，我意识到生活被繁杂的数字内容裹挟。这引发了我对极简主义的思考，以及如何在工作、生...</p>
                     <div class="article-meta">
-                        <span class="article-date">2025-01-10</span>
-                        <span class="article-read">12分钟阅读</span>
+                        <span class="article-date">2025-11-17</span>
+                        <span class="article-read">6分钟阅读</span>
                     </div>
                 </article>
+
             </div>
         </div>
     </section>
