--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
                         同时维持着结构化的个人发展routine，专注于认知提升、技术能力和健康维护。
                     </p>
                     <p class="block-text">
-                        2025年，我即将成为一名<strong>父亲</strong>，这也让我思考如何在个人发展和家庭责任之间找到<strong>平衡</strong>。
+                        2025年，我即将成为一名<strong>父亲</strong>，这也让我思考如何在个人发展和家庭责任之间找到平衡。
                     </p>
                 </div>
 
